fixed recording request types + fixed recordings swagger + refactorings and cleanup
